feat(investigation): finish H3 integration with H2
